updated html structure and created new branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Easter Game</title>
   </head>
   <body>
+    <main>
+    <article>
     <div id="board" class="center">
       <div class="square" id="square-1">
         <div></div>
@@ -84,6 +86,14 @@
       <div class="square" id="square-25">
         <div></div>
       </div>
+    </article>
+    <article>
+
+    </article>
+    <article>
+      
+    </article>
+  </main>
     </div>
   </body>
 </html>
