structured html added checkboxes for game

--- a/index.html
+++ b/index.html
@@ -10,88 +10,89 @@
   <body>
     <main>
     <article>
-    <div id="board" class="center">
-      <div class="square" id="square-1">
-        <div></div>
+      <h1>Gametime</h1>
+    <div class="gameboard">
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-2">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-3">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-4">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-5">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-6">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-7">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-8">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-9">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-10">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-11">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-12">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-13">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-14">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-15">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-16">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-17">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-18">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-19">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-20">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-21">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-22">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-23">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-24">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
-      <div class="square" id="square-25">
-        <div></div>
+      <div class="square">
+        <input type="checkbox">
       </div>
     </article>
     <article>
 
     </article>
     <article>
-      
+
     </article>
   </main>
     </div>
