added egg and blinking animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <article>
     <div id="board" class="center">
       <div class="square" id="square-1">
-        <div></div>
+        <div><input type="checkbox"></div>
       </div>
       <div class="square" id="square-2">
         <div></div>
