html structure and css

--- a/index.html
+++ b/index.html
@@ -1,100 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Easter Game</title>
-  </head>
-  <body>
-    <main>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Easter Game</title>
+</head>
+
+<body>
+  <main>
+    <article>
+      <div class="wrapper--information">
+        <h1>Startscreen</h1>
+        <p>No omelet for you</p>
+        <img src="./img/chickcry.png" alt="Crying chicken">
+        <button>Start game</button>
+      </div>
+    </article>
     <article>
       <h1>Gametime</h1>
-    <div class="gameboard">
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
-      <div class="square">
-        <input type="checkbox">
-      </div>
+      <div class="gameboard">
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
     </article>
     <article>
-
-    </article>
-    <article>
-
+      <div class="wrapper--information">
+        <h1>You failed to find all the chicken</h1>
+        <p>No omelet for you</p>
+        <img src="./img/chickcry.png" alt="Crying chicken">
+        <a href="./index.html">Try again</a>
+      </div>
     </article>
   </main>
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
