--- a/index.html
+++ b/index.html
@@ -1,89 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Easter Game</title>
-  </head>
-  <body>
-    <div id="board" class="center">
-      <div class="square" id="square-1">
-        <div></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Easter Game</title>
+</head>
+<!-- jhjhjhj -->
+<body>
+  <main>
+    <article>
+      <div class="wrapper--information">
+        <h1>Startscreen</h1>
+        <p>No omelet for you</p>
+        <img src="./img/chickcry.png" alt="Crying chicken">
+        <button>Start game</button>
       </div>
-      <div class="square" id="square-2">
-        <div></div>
+    </article>
+    <article>
+      <h1>Gametime</h1>
+      <div class="gameboard">
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+        <div class="square">
+          <input type="checkbox">
+        </div>
+    </article>
+    <article>
+      <div class="wrapper--information">
+        <h1>You failed to find all the chicken</h1>
+        <p>No omelet for you</p>
+        <img src="./img/chickcry.png" alt="Crying chicken">
+        <a href="./index.html">Try again</a>
       </div>
-      <div class="square" id="square-3">
-        <div></div>
-      </div>
-      <div class="square" id="square-4">
-        <div></div>
-      </div>
-      <div class="square" id="square-5">
-        <div></div>
-      </div>
-      <div class="square" id="square-6">
-        <div></div>
-      </div>
-      <div class="square" id="square-7">
-        <div></div>
-      </div>
-      <div class="square" id="square-8">
-        <div></div>
-      </div>
-      <div class="square" id="square-9">
-        <div></div>
-      </div>
-      <div class="square" id="square-10">
-        <div></div>
-      </div>
-      <div class="square" id="square-11">
-        <div></div>
-      </div>
-      <div class="square" id="square-12">
-        <div></div>
-      </div>
-      <div class="square" id="square-13">
-        <div></div>
-      </div>
-      <div class="square" id="square-14">
-        <div></div>
-      </div>
-      <div class="square" id="square-15">
-        <div></div>
-      </div>
-      <div class="square" id="square-16">
-        <div></div>
-      </div>
-      <div class="square" id="square-17">
-        <div></div>
-      </div>
-      <div class="square" id="square-18">
-        <div></div>
-      </div>
-      <div class="square" id="square-19">
-        <div></div>
-      </div>
-      <div class="square" id="square-20">
-        <div></div>
-      </div>
-      <div class="square" id="square-21">
-        <div></div>
-      </div>
-      <div class="square" id="square-22">
-        <div></div>
-      </div>
-      <div class="square" id="square-23">
-        <div></div>
-      </div>
-      <div class="square" id="square-24">
-        <div></div>
-      </div>
-      <div class="square" id="square-25">
-        <div></div>
-      </div>
-    </div>
-  </body>
+    </article>
+  </main>
+  </div>
+</body>
+
 </html>
