--- a/index.html
+++ b/index.html
@@ -8,82 +8,103 @@
     <title>Easter Game</title>
   </head>
   <body>
-    <div id="board" class="center">
-      <div class="square" id="square-1">
-        <div></div>
+    <main>
+        <article>
+            <div class="wrapper--information">
+              <h1>Startscreen</h1>
+              <p>No omelet for you</p>
+              <img src="./img/chickcry.png" alt="Crying chicken">
+              <button>Start game</button>
+            </div>
+          </article>
+    <article>
+      <h1>Gametime</h1>
+    <div class="gameboard">
+      <div class="square">
+        <input type="checkbox" id="egg1">
       </div>
-      <div class="square" id="square-2">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg2">
       </div>
-      <div class="square" id="square-3">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg3">
       </div>
-      <div class="square" id="square-4">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg4">
       </div>
-      <div class="square" id="square-5">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg5">
       </div>
-      <div class="square" id="square-6">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg6">
       </div>
-      <div class="square" id="square-7">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg7">
       </div>
-      <div class="square" id="square-8">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg8">
       </div>
-      <div class="square" id="square-9">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg9">
       </div>
-      <div class="square" id="square-10">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg10">
       </div>
-      <div class="square" id="square-11">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg11">
       </div>
-      <div class="square" id="square-12">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg12">
       </div>
-      <div class="square" id="square-13">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg13">
       </div>
-      <div class="square" id="square-14">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg14">
       </div>
-      <div class="square" id="square-15">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg15">
       </div>
-      <div class="square" id="square-16">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg16">
       </div>
-      <div class="square" id="square-17">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg17">
       </div>
-      <div class="square" id="square-18">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg18">
       </div>
-      <div class="square" id="square-19">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg19">
       </div>
-      <div class="square" id="square-20">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg20">
       </div>
-      <div class="square" id="square-21">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg21">
       </div>
-      <div class="square" id="square-22">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg22">
       </div>
-      <div class="square" id="square-23">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg23">
       </div>
-      <div class="square" id="square-24">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg24">
       </div>
-      <div class="square" id="square-25">
-        <div></div>
+      <div class="square">
+        <input type="checkbox" id="egg25">
       </div>
+    </article>
+    <article>
+        <div class="wrapper--information">
+            <h1>You failed to find all the chicken</h1>
+            <p>No omelet for you</p>
+            <img src="./img/chickcry.png" alt="Crying chicken">
+            <a href="./index.html">Try again</a>
+          </div>
+    </article>
+  </main>
     </div>
   </body>
 </html>
