--- a/index.html
+++ b/index.html
@@ -1,110 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Easter Game</title>
-  </head>
-  <body>
-    <main>
-        <article>
-            <div class="wrapper--information">
-              <h1>Startscreen</h1>
-              <p>No omelet for you</p>
-              <img src="./img/chickcry.png" alt="Crying chicken">
-              <button>Start game</button>
-            </div>
-          </article>
-    <article>
-      <h1>Gametime</h1>
-    <div class="gameboard">
-      <div class="square">
-        <input type="checkbox" id="egg1">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg2">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg3">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg4">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg5">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg6">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg7">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg8">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg9">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg10">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg11">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg12">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg13">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg14">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg15">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg16">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg17">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg18">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg19">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg20">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg21">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg22">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg23">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg24">
-      </div>
-      <div class="square">
-        <input type="checkbox" id="egg25">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Easter Game</title>
+</head>
+
+<body>
+  <main>
+    <article id="startScreen">
+      <div class="wrapper--information">
+        <h1>Startscreen</h1>
+        <p>No omelet for you
+        </p>
+        <img src="./img/chickcry.png" alt="Crying chicken">
+        <p>How to play: blah blah 30 second time limit</p>
+        <a href="#gameScreen"> <button>Start game</button></a>
       </div>
     </article>
-    <article>
-        <div class="wrapper--information">
-            <h1>You failed to find all the chicken</h1>
-            <p>No omelet for you</p>
-            <img src="./img/chickcry.png" alt="Crying chicken">
-            <a href="./index.html">Try again</a>
-          </div>
+    <article id="gameScreen">
+      <h1>Gametime</h1>
+      <div class="gameboard">
+        <div class="square">
+          <input type="checkbox" id="egg1">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg2">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg3">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg4">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg5">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg6">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg7">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg8">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg9">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg10">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg11">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg12">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg13">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg14">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg15">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg16">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg17">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg18">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg19">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg20">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg21">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg22">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg23">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg24">
+        </div>
+        <div class="square">
+          <input type="checkbox" id="egg25">
+        </div>
+        <a href="#startScreen"><button>Return to start</button></a>
+        <a href="#gameOverScreen"><button>Fail</button></a>
+    </article>
+    <article id="gameOverScreen">
+      <div class="wrapper--information">
+        <h1>You failed to find all the chicken</h1>
+        <p>No omelet for you</p>
+        <img src="./img/chickcry.png" alt="Crying chicken">
+        <a href="./index.html"><button>Try again</button></a>
+      </div>
     </article>
   </main>
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
