--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <main>
     <article id="startScreen">
       <div class="wrapper--information">
-        <h1>Startscreen</h1>
-        <p>No omelet for you
+        <h1>Egg hunt</h1>
+        <p>You crave an omelette. Go hunt for eggs!
         </p>
-        <img src="./img/chickcry.png" alt="Crying chicken">
-        <p>How to play: blah blah 30 second time limit</p>
+        <img src="./img/chickneutral.png" alt="Neutral chicken">
+        <p>How to play: Crack all the eggs before the 30 second timer runs out!</p>
         <a href="#gameScreen"> <button>Start game</button></a>
       </div>
     </article>
@@ -104,7 +104,7 @@
     </article>
     <article id="gameOverScreen">
       <div class="wrapper--information">
-        <h1>You failed to find all the chicken</h1>
+        <h1>You failed to find all the chickens</h1>
         <p>No omelet for you</p>
         <img src="./img/chickcry.png" alt="Crying chicken">
         <a href="./index.html"><button>Try again</button></a>
