--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&display=swap" rel="stylesheet">
   <title>Easter Game</title>
 </head>
 
@@ -105,7 +108,7 @@
     <article id="gameOverScreen">
       <div class="wrapper--information">
         <h1>You failed to find all the chickens</h1>
-        <p>No omelet for you</p>
+        <p>No omelet for you...</p>
         <img src="./img/chickcry.png" alt="Crying chicken">
         <a href="./index.html"><button>Try again</button></a>
       </div>
