added some css variables

--- a/index.html
+++ b/index.html
@@ -18,85 +18,85 @@
         </p>
         <img src="./img/chickneutral.png" alt="Neutral chicken">
         <p>How to play: Crack all the eggs before the 30 second timer runs out!</p>
-        <a href="#gameScreen"> <button>Start game</button></a>
+        <a href="#gameScreen"> <button >Start game</button></a>
       </div>
     </article>
     <article id="gameScreen">
       <h1>Gametime</h1>
       <div class="gameboard">
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg1">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg2">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg3">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg4">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg5">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg6">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg7">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg8">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg9">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg10">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg11">
         </div>
-        <div class="square">
+        <div class="gameboard__gameboard__square">
           <input type="checkbox" id="egg12">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg13">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg14">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg15">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg16">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg17">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg18">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg19">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg20">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg21">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg22">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg23">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg24">
         </div>
-        <div class="square">
+        <div class="gameboard__square">
           <input type="checkbox" id="egg25">
         </div>
         <a href="#startScreen"><button>Return to start</button></a>
