--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>You crave an omelette. Go hunt for eggs!
         </p>
         <img src="./img/chickneutral.png" alt="Neutral chicken">
-        <p>How to play: Crack all the eggs before the 30 second timer runs out!</p>
+        <p>How to play: Crack all the eggs as fast as you can!</p>
         <a href="#gameScreen"> <button >Start game</button></a>
       </div>
     </article>
@@ -25,79 +25,79 @@
       <h1>Gametime</h1>
       <div class="gameboard">
         <div class="gameboard__square">
-          <input type="checkbox" id="egg1">
+          <input type="checkbox" class="gameboard__checkbox--eggimage1">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg2">
+          <input type="checkbox" class="gameboard__checkbox--eggimage2">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg3">
+          <input type="checkbox" class="gameboard__checkbox--eggimage3">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg4">
+          <input type="checkbox" class="gameboard__checkbox--eggimage4">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg5">
+          <input type="checkbox" class="gameboard__checkbox--eggimage5">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg6">
+          <input type="checkbox" class="gameboard__checkbox--eggimage6">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg7">
+          <input type="checkbox" class="gameboard__checkbox--eggimage7">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg8">
+          <input type="checkbox" class="gameboard__checkbox--eggimage8">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg9">
+          <input type="checkbox" class="gameboard__checkbox--eggimage9">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg10">
+          <input type="checkbox" class="gameboard__checkbox--eggimage10">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg11">
-        </div>
-        <div class="gameboard__gameboard__square">
-          <input type="checkbox" id="egg12">
+          <input type="checkbox" class="gameboard__checkbox--eggimage11">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg13">
+          <input type="checkbox" class="gameboard__checkbox--eggimage12">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg14">
+          <input type="checkbox" class="gameboard__checkbox--eggimage13">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg15">
+          <input type="checkbox" class="gameboard__checkbox--eggimage14">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg16">
+          <input type="checkbox" class="gameboard__checkbox--eggimage15">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg17">
+          <input type="checkbox" class="gameboard__checkbox--eggimage16">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg18">
+          <input type="checkbox" class="gameboard__checkbox--eggimage17">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg19">
+          <input type="checkbox" class="gameboard__checkbox--eggimage18">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg20">
+          <input type="checkbox" class="gameboard__checkbox--eggimage19">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg21">
+          <input type="checkbox" class="gameboard__checkbox--eggimage20">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg22">
+          <input type="checkbox" class="gameboard__checkbox--eggimage21">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg23">
+          <input type="checkbox" class="gameboard__checkbox--eggimage22">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg24">
+          <input type="checkbox" class="gameboard__checkbox--eggimage23">
         </div>
         <div class="gameboard__square">
-          <input type="checkbox" id="egg25">
+          <input type="checkbox" class="gameboard__checkbox--eggimage24">
+        </div>
+        <div class="gameboard__square">
+          <input type="checkbox" class="gameboard__checkbox--eggimage25">
         </div>
         <a href="#startScreen"><button>Return to start</button></a>
         <a href="#gameOverScreen"><button>Fail</button></a>
