--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         </p>
         <img src="./img/chickneutral.png" alt="Neutral chicken">
         <p>How to play: Crack all the eggs as fast as you can!</p>
-        <a href="#gameScreen"> <button >Start game</button></a>
+        <a href="#gameScreen"> <button>Start game</button></a>
       </div>
     </article>
     <article id="gameScreen">
       <h1>Gametime</h1>
       <div>
         <p>Eggs cracked: <span id="counter">0</span></p>
+        <p>Time elapsed: <span id="timer">00:00:00</span></p>
       </div>
       <div class="gameboard">
         <div class="gameboard__square">
@@ -102,8 +103,7 @@
         <div class="gameboard__square">
           <input type="checkbox" class="gameboard__checkbox--eggimage25">
         </div>
-        <a href="#startScreen"><button>Return to start</button></a>
-        <a href="#gameOverScreen"><button>Fail</button></a>
+        <a href="./index.html"><button>Return to start</button></a>
     </article>
   </main>
   </div>
