--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div class="gameboard__square">
           <input type="checkbox" class="gameboard__checkbox--eggimage25">
         </div>
+        <a href="./index.html"><button>Return to start</button></a>
     </article>
   </main>
   </div>
