added some hover animation and fixed margin

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <article id="startScreen">
       <div class="wrapper--information">
         <h1>Egg hunt</h1>
-        <p>You crave an omelette. Go hunt for eggs!
+        <p>You crave an omelette.
         </p>
+        <p>Go hunt for eggs!</p>
         <img src="./img/chickneutral.png" alt="Neutral chicken">
-        <p>How to play: Crack all the eggs as fast as you can!</p>
+        <p>How to play:</p>
+        <p>Crack all the eggs as fast as you can!</p>
         <a href="#gameScreen"> <button>Start game</button></a>
       </div>
     </article>
